[gd_scene load_steps=23 format=2]

[ext_resource path="res://Instanciaveis/Estados/Inimigo/Atacar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Instanciaveis/Estados/Inimigo/Aguardo.tscn" type="PackedScene" id=2]
[ext_resource path="res://Conteudos/Musicas/Ataques/Rato/Rato1.wav" type="AudioStream" id=3]
[ext_resource path="res://Instanciaveis/Ataque.tscn" type="PackedScene" id=4]
[ext_resource path="res://Instanciaveis/Scripts/OuvinteDeEventosRato.gd" type="Script" id=5]
[ext_resource path="res://Conteudos/Shaders/ShaderPersonagem.shader" type="Shader" id=7]
[ext_resource path="res://Instanciaveis/Estados/Inimigo/Seguir.tscn" type="PackedScene" id=8]
[ext_resource path="res://Instanciaveis/Inimigos/Inimigo.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Sprites/rat_02.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/rat_03.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/rat_01.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/rat_04.png" type="Texture" id=15]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/brilho_purificacao = 5.0
shader_param/progresso_purificacao = 0.0
shader_param/coeficiente_mix_dano = 0.0
shader_param/cor_purificacao = Color( 0.360784, 0.847059, 1, 1 )
shader_param/cor_dano = Color( 1, 0, 0, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 35, 60 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 35, 60 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 35, 60 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 35, 60 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 35, 60 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 35, 60 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "atacando",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "parado",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "andando",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=9]
radius = 46.5104
height = 7.1326

[sub_resource type="CircleShape2D" id=10]
radius = 13.8158

[node name="Inimigo" instance=ExtResource( 11 )]

[node name="Sprite" parent="." index="0"]
material = SubResource( 1 )
frames = SubResource( 8 )
animation = "parado"
playing = false

[node name="SomAtacar" parent="." index="2"]
stream = ExtResource( 3 )

[node name="OuvinteDeEventos" type="Node" parent="." index="3"]
script = ExtResource( 5 )

[node name="Aguardo" parent="GerenciadorEstados" index="0" instance=ExtResource( 2 )]

[node name="Atacar" parent="GerenciadorEstados" index="1" instance=ExtResource( 1 )]

[node name="Seguir" parent="GerenciadorEstados" index="2" instance=ExtResource( 8 )]

[node name="Ataque" parent="." index="7" instance=ExtResource( 4 )]
position = Vector2( 0, -6 )
collision_layer = 0
collision_mask = 2

[node name="Visao" type="Area2D" parent="." index="8"]
position = Vector2( 0, -6 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Visao" index="0"]
rotation = 0.785398
shape = SubResource( 9 )

[node name="Area_de_ataque" type="Area2D" parent="." index="9"]
position = Vector2( 0, -6 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_de_ataque" index="0"]
shape = SubResource( 10 )

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="atacou" from="Ataque" to="." method="_on_Ataque_atacou"]
[connection signal="atacou" from="Ataque" to="SomAtacar" method="play"]
[connection signal="body_entered" from="Ataque" to="GerenciadorEstados/Atacar" method="_on_Ataque_body_entered"]
[connection signal="body_exited" from="Ataque" to="GerenciadorEstados/Atacar" method="_on_Ataque_body_exited"]
[connection signal="body_entered" from="Visao" to="OuvinteDeEventos" method="_on_Visao_body_entered"]
[connection signal="body_exited" from="Visao" to="OuvinteDeEventos" method="_on_Visao_body_exited"]
[connection signal="body_entered" from="Area_de_ataque" to="OuvinteDeEventos" method="_on_Area_de_ataque_body_entered"]
[connection signal="body_exited" from="Area_de_ataque" to="OuvinteDeEventos" method="_on_Area_de_ataque_body_exited"]
